[2k EPS] using cqengine to keep the information of probes/methods/classes offheap